--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,18 @@
-.h1 {
+.wrapper {
   width: 100vw;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.h1 {
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+.link {
+  margin-top: 30px;
+  text-decoration: underline;
 }
 
 /* .main {
